--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
 </head>
 
 <body>
+    <!-- 버블효과 -->
+    <div class="wrapper">
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+   </div>
+
     <!-- 물결 효과 -->
     <div class="fixedDecoWave">
         <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -43,13 +61,29 @@
         </svg>
     </div>
     <!-- 물결효과 -->
+    <!-- 마우스 스크롤 -->
+    <!-- <div class="hero">
+	
+        <h1>Animated SVG <br>Scrolling Mouse Icon</h1>
+        
+        <a class="scroll-link" href="#content">
+            <svg class="mouse" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 76 130" preserveAspectRatio="xMidYMid meet">
+            <g fill="none" fill-rule="evenodd">
+                <rect width="70" height="118" x="1.5" y="1.5" stroke="#FFF" stroke-width="3" rx="36"/>
+                <circle class="scroll" cx="36.5" cy="31.5" r="4.5" fill="#FFF"/>
+            </g>
+        </svg>
+        </a>
+        
+    </div> -->
+    <!-- 마우스스크롤 -->
     <!-- 마우스커서 -->
     <div id="cursor" style="top: 901px; left: 290px;"></div>
     <script src="./js/mouse.js"></script>
     <!-- 마우스커서 -->
-    <div class="wrap grid">
+    <div class="wrap grid scroll-container">
         <div class="btnTop">TOP</div>
-        <div class="header">
+        <div class="header scroll-area">
             <div class="inner-header">
                 <div class="title">
                     <p>im gyu rim</p>
@@ -110,7 +144,7 @@
             </div>
 
         </div>
-        <div class="aboutT">
+        <div class="aboutT scroll-area">
             <section class="about_list">
                 <ul>
                     <li>im gyu rim</li>
@@ -189,7 +223,7 @@
                 </ul>
             </section>
         </div>
-        <div class="aboutB">
+        <div class="aboutB scroll-area">
             <section class="skills">
                 <h4>skills</h4>
                 <ul class="skill_List">
@@ -248,7 +282,7 @@
                 <div class="box"></div>
             </section>
         </div>
-        <div class="popup">
+        <div class="popup scroll-area" >
             <div class="popupbox"><img src="./img/img/windowb.png" alt="보라색윈도우창"></div>
             <h1><span>01</span>popup design</h1>
             <section class="popupImg">
@@ -414,7 +448,7 @@
                 <div class="btnPopupClose"><a href="#">close</a></div>
                 </section>
         </div>
-        <div class="banner">
+        <div class="banner scroll-area">
             <div class="bannerbox"><img src="./img/img/windowp.png" alt="분홍색윈도우창"></div>
             <h1><span>02</span>banner design</h1>
             <section class="bannerImg">
@@ -422,7 +456,7 @@
                     <li class="on">
                         <img src="./banner/primera.png" alt="프리메라 배너">
                         <ul>
-                            <li>
+                            <li >
                                 <h4>프리메라</h4>
                                 <ul>
                                     <li>작업기간 <span></span></li>
@@ -501,7 +535,7 @@
                 <a class="nextbtn" href="#">next</a>
             </section>
         </div>
-        <div class="redesign">
+        <div class="redesign scroll-area">
             <div class="redesignbox"><img src="./img/img/windowy.png" alt="노란색윈도우창"></div>
             <h1><span>03</span>redesign PAGE</h1>
             <div class="hongkongmain">
@@ -528,16 +562,16 @@
                 </ul>
             </div><a href="#">상세보기</a>
         </div>
-        <div class="contact">
+        <div class="contact scroll-area">
             <div class="contactbox"><img src="./img/img/thank.png" alt=""></div>
             <div class="con_list">
-               <ul>
+                <ul>
                     <li><a href="#"><img src="./img/img/QR.png" alt="qr코드"></a></li>
                     <li><a href="#"><img src="./img/img/github.png" alt="깃허브"></a></li>
-               </ul>
+             </ul>
             </div>
         </div>
     </div>
 </body>
 
-</html>
+</html> 
