--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="bubble"></div>
         <div class="bubble"></div>
         <div class="bubble"></div>
-   </div>
+    </div>
 
     <!-- 물결 효과 -->
     <div class="fixedDecoWave">
@@ -61,29 +61,14 @@
         </svg>
     </div>
     <!-- 물결효과 -->
-    <!-- 마우스 스크롤 -->
-    <!-- <div class="hero">
-	
-        <h1>Animated SVG <br>Scrolling Mouse Icon</h1>
-        
-        <a class="scroll-link" href="#content">
-            <svg class="mouse" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 76 130" preserveAspectRatio="xMidYMid meet">
-            <g fill="none" fill-rule="evenodd">
-                <rect width="70" height="118" x="1.5" y="1.5" stroke="#FFF" stroke-width="3" rx="36"/>
-                <circle class="scroll" cx="36.5" cy="31.5" r="4.5" fill="#FFF"/>
-            </g>
-        </svg>
-        </a>
-        
-    </div> -->
-    <!-- 마우스스크롤 -->
+
     <!-- 마우스커서 -->
     <div id="cursor" style="top: 901px; left: 290px;"></div>
     <script src="./js/mouse.js"></script>
     <!-- 마우스커서 -->
-    <div class="wrap grid scroll-container">
+    <div class="wrap grid">
         <div class="btnTop">TOP</div>
-        <div class="header scroll-area">
+        <div class="header">
             <div class="inner-header">
                 <div class="title">
                     <p>im gyu rim</p>
@@ -144,7 +129,7 @@
             </div>
 
         </div>
-        <div class="aboutT scroll-area">
+        <div class="aboutT">
             <section class="about_list">
                 <ul>
                     <li>im gyu rim</li>
@@ -223,14 +208,36 @@
                 </ul>
             </section>
         </div>
-        <div class="aboutB scroll-area">
-            <section class="skills">
+        <div class="aboutB">
+            <div class="skill">
+                <div class="outer">
+                    <div class="inner">
+
+                    </div>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+            <!-- <section class="skills">
                 <h4>skills</h4>
                 <ul class="skill_List">
-                    <li>
-                        <figure><svg viewBox="0 0 120 120">
+                     -->
+                    <!-- <li>
+                        <img src="./img/img/" alt="">
+                        <figure>
+                            <svg viewBox="0 0 120 120">
                                 <circle class="c1" cx="60" cy="60" r="50" />
-                            </svg><span class="per">90</span></figure><img src="./img/skill/html.png" alt="html이미지">
+                            </svg>
+                            <span class="per">90</span>
+                        </figure>
+                        <img src="./img/skill/html.png" alt="html이미지">
                         <p>Lorem ipsum dolor sit,
                             amet consectetur adipisicing elit. Omnis nesciunt quaerat maiores amet,
                         </p>
@@ -277,12 +284,12 @@
                         <p>Lorem ipsum dolor sit,
                             amet consectetur adipisicing elit. Omnis nesciunt quaerat maiores amet,
                         </p>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="box"></div>
             </section>
         </div>
-        <div class="popup scroll-area" >
+        <div class="popup" >
             <div class="popupbox"><img src="./img/img/windowb.png" alt="보라색윈도우창"></div>
             <h1><span>01</span>popup design</h1>
             <section class="popupImg">
@@ -448,7 +455,7 @@
                 <div class="btnPopupClose"><a href="#">close</a></div>
                 </section>
         </div>
-        <div class="banner scroll-area">
+        <div class="banner">
             <div class="bannerbox"><img src="./img/img/windowp.png" alt="분홍색윈도우창"></div>
             <h1><span>02</span>banner design</h1>
             <section class="bannerImg">
@@ -535,7 +542,7 @@
                 <a class="nextbtn" href="#">next</a>
             </section>
         </div>
-        <div class="redesign scroll-area">
+        <div class="redesign">
             <div class="redesignbox"><img src="./img/img/windowy.png" alt="노란색윈도우창"></div>
             <h1><span>03</span>redesign PAGE</h1>
             <div class="hongkongmain">
@@ -562,7 +569,7 @@
                 </ul>
             </div><a href="#">상세보기</a>
         </div>
-        <div class="contact scroll-area">
+        <div class="contact">
             <div class="contactbox"><img src="./img/img/thank.png" alt=""></div>
             <div class="con_list">
                 <ul>
