--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <link rel="stylesheet" href="./css/index.css">
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="./js/index.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+/>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     </style>
 </head>
 
@@ -66,8 +69,10 @@
     <div id="cursor" style="top: 901px; left: 290px;"></div>
     <script src="./js/mouse.js"></script>
     <!-- 마우스커서 -->
+    <!-- top버튼 -->
+    <div class="btnTop">TOP</div>
+    <!-- top`/ -->
     <div class="wrap grid">
-        <div class="btnTop">TOP</div>
         <div class="header">
             <div class="inner-header">
                 <div class="title">
@@ -209,85 +214,52 @@
             </section>
         </div>
         <div class="aboutB">
-            <div class="skill">
-                <div class="outer">
-                    <div class="inner">
-
-                    </div>
-                </div>
+            <div class="circlebox">
+                <svg viewBox="0 0 120 120">
+                    <circle cx="60" cy="60" r="50" />
+                </svg>
+                <span class="per">90</span>
             </div>
-
-
-
-
-
-
-
-
-
-            <!-- <section class="skills">
-                <h4>skills</h4>
-                <ul class="skill_List">
-                     -->
-                    <!-- <li>
-                        <img src="./img/img/" alt="">
-                        <figure>
-                            <svg viewBox="0 0 120 120">
-                                <circle class="c1" cx="60" cy="60" r="50" />
-                            </svg>
-                            <span class="per">90</span>
-                        </figure>
-                        <img src="./img/skill/html.png" alt="html이미지">
-                        <p>Lorem ipsum dolor sit,
-                            amet consectetur adipisicing elit. Omnis nesciunt quaerat maiores amet,
-                        </p>
+            <div class="skillList">
+                <ul>
+                    <li>
+                        <img src="./img/skill/html.png" alt="">
+                        <h3>html</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto praesentium quam odio magni ut vitae? Enim quis expedita dolorem iusto quos, voluptatibus voluptas ab consequuntur, voluptatem quidem odio amet consectetur.</p>
+                        <p class="per">80</p>
+                    </li>
+                    <li> 
+                        <img src="./img/skill/css.png" alt="">
+                        <h3>css</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto praesentium quam odio magni ut vitae? Enim quis expedita dolorem iusto quos, voluptatibus voluptas ab consequuntur, voluptatem quidem odio amet consectetur.</p>
+                        <p class="per">40</p>
                     </li>
                     <li>
-                        <figure><svg viewBox="0 0 120 120">
-                                <circle class="c1" cx="60" cy="60" r="50" />
-                            </svg><span class="per">90</span></figure><img src="./img/skill/css.png" alt="css이미지">
-                        <p>Lorem ipsum dolor sit,
-                            amet consectetur adipisicing elit. Omnis nesciunt quaerat maiores amet,
-                        </p>
+                        <img src="./img/skill/js.png" alt="">
+                        <h3>js</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto praesentium quam odio magni ut vitae? Enim quis expedita dolorem iusto quos, voluptatibus voluptas ab consequuntur, voluptatem quidem odio amet consectetur.</p>
+                        <p class="per">60</p>
                     </li>
                     <li>
-                        <figure><svg viewBox="0 0 120 120">
-                                <circle class="c1" cx="60" cy="60" r="50" />
-                            </svg><span class="per">80</span></figure><img src="./img/skill//js.png" alt="JS이미지">
-                        <p>Lorem ipsum dolor sit,
-                            amet consectetur adipisicing elit. Omnis nesciunt quaerat maiores amet,
-                        </p>
+                        <img src="./img/skill/jquery.png" alt="">
+                        <h3>jquery</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto praesentium quam odio magni ut vitae? Enim quis expedita dolorem iusto quos, voluptatibus voluptas ab consequuntur, voluptatem quidem odio amet consectetur.</p>
+                        <p class="per">100</p>
                     </li>
                     <li>
-                        <figure><svg viewBox="0 0 120 120">
-                                <circle class="c1" cx="60" cy="60" r="50" />
-                            </svg><span class="per">85</span></figure><img src="./img/skill/jquery.png"
-                            alt="jaquery이미지">
-                        <p>Lorem ipsum dolor sit,
-                            amet consectetur adipisicing elit. Omnis nesciunt quaerat maiores amet,
-                        </p>
+                        <img src="./img/skill/photoshop.png" alt="">
+                        <h3>photoshop</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto praesentium quam odio magni ut vitae? Enim quis expedita dolorem iusto quos, voluptatibus voluptas ab consequuntur, voluptatem quidem odio amet consectetur.</p>
+                        <p class="per">100</p>
                     </li>
                     <li>
-                        <figure><svg viewBox="0 0 120 120">
-                                <circle class="c1" cx="60" cy="60" r="50" />
-                            </svg><span class="per">90</span></figure><img src="./img/skill/photoshop.png"
-                            alt="photoshop이미지">
-                        <p>Lorem ipsum dolor sit,
-                            amet consectetur adipisicing elit. Omnis nesciunt quaerat maiores amet,
-                        </p>
+                        <img src="./img/skill/illustrator.png" alt="">
+                        <h3>illustrator</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto praesentium quam odio magni ut vitae? Enim quis expedita dolorem iusto quos, voluptatibus voluptas ab consequuntur, voluptatem quidem odio amet consectetur.</p>
+                        <p class="per">100</p>
                     </li>
-                    <li>
-                        <figure><svg viewBox="0 0 120 120">
-                                <circle class="c1" cx="60" cy="60" r="50" />
-                            </svg><span class="per">90</span></figure><img src="./img/skill/illustrator.png"
-                            alt="illustrator이미지">
-                        <p>Lorem ipsum dolor sit,
-                            amet consectetur adipisicing elit. Omnis nesciunt quaerat maiores amet,
-                        </p>
-                    </li> -->
                 </ul>
-                <div class="box"></div>
-            </section>
+            </div>
         </div>
         <div class="popup" >
             <div class="popupbox"><img src="./img/img/windowb.png" alt="보라색윈도우창"></div>
@@ -459,8 +431,8 @@
             <div class="bannerbox"><img src="./img/img/windowp.png" alt="분홍색윈도우창"></div>
             <h1><span>02</span>banner design</h1>
             <section class="bannerImg">
-                <ul class="train">
-                    <li class="on">
+                <ul class="swiper-wrapper">
+                    <li class="swiper-slide">
                         <img src="./banner/primera.png" alt="프리메라 배너">
                         <ul>
                             <li >
@@ -477,7 +449,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <img src="./banner/ssg.png" alt="쓱배송 배너">
                         <ul>
                             <li>
@@ -494,7 +466,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <img src="./banner/st.png" alt="카페 배너">
                         <ul>
                             <li>
@@ -511,7 +483,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="swiper-slide">
                         <img src="./banner/BlackfridayBanner.png" alt="블랙프라이데이 배너">
                         <ul>
                             <li>
