--- a/index.html
+++ b/index.html
@@ -562,8 +562,9 @@
         </div>
         <div class="redesign">
             <div class="redesignbox"><img src="./img/img/windowy.png" alt="노란색윈도우창"></div>
-            <h1><span>03</span>redesign PAGE</h1>
+            <h1><span>03</span>redesign</h1>
             <div class="hongkongmain">
+                <img class="computer" src="./img/OBDKVJ1-[Converted].png" alt="">
                 <figure><img src="./img/임규림-메인페이지.jpg" alt="mainpage"></figure>
             </div>
             <div class="redesign_contents">
